<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBg">
    `

    <LinearLayout
        android:id="@+id/first_set"
        android:layout_alignParentTop="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center"
                android:text="@string/balanceText"
                android:textAlignment="textStart"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#a6a6a6" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.4"
                android:background="@color/editBox"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center"
                android:text="@string/interestText"
                android:textAlignment="textStart"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#a6a6a6" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.4"
                android:background="@color/editBox"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center"
                android:text="@string/minPaymentText"
                android:textAlignment="textStart"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#a6a6a6" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.4"
                android:background="@color/editBox"
                android:inputType="numberDecimal" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/second_set"
        android:layout_below="@id/first_set"
        android:layout_marginTop="@dimen/layer_margin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center"
                android:text="@string/finalBalanceText"
                android:textAlignment="textStart"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#a6a6a6" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.4"
                android:background="@color/editBox"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center"
                android:text="@string/monthsLeftText"
                android:textAlignment="textStart"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#a6a6a6" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.4"
                android:background="@color/editBox"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center"
                android:text="@string/interestToPayText"
                android:textAlignment="textStart"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#a6a6a6" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.4"
                android:background="@color/editBox"
                android:inputType="numberDecimal" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/computeButton" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clearButton" />

    </LinearLayout>
</RelativeLayout>
